# django_tree

./: README.md  pyproject.toml
tree/menu/: admin.py  controllers.py  models.py  services.py  views.py
tree/menu/migrations/: 0001_initial.py  0002_alter_menuitem_parent.py  0003_remove_menuitem_menu_menu_items.py  0004_delete_menu.py  0005_menu.py  0006_menu_link.py  0007_remove_menu_link_menuitem_link.py  0008_alter_menuitem_link.py  0009_remove_menu_items_menuitem_menu.py
tree/menu/templatetags/: menu_tag.py
tree/static/css/: index.css
tree/templates/: main_page.html  menu.html  submenu.html
tree/tree/: settings.py  urls.py
